modified:   .github/workflows/daily-gh-trigger.yml

--- a/.github/workflows/daily-gh-trigger.yml
+++ b/.github/workflows/daily-gh-trigger.yml
@@ -1,5 +1,5 @@
 # your-trigger-repo/.github/workflows/daily-auto-trigger.yml
-name: Daily Auto Trigger GKI_SukiSU_SUSFS Build (No setup-gh Action)
+name: Daily Auto Trigger GKI_SukiSU_SUSFS Build
 
 on:
   schedule:
