--- a/.github/workflows/daily-gh-trigger.yml
+++ b/.github/workflows/daily-gh-trigger.yml
@@ -3,9 +3,8 @@ name: Daily Auto Trigger GKI_SukiSU_SUSFS Build
 
 on:
   schedule:
-    # 每天新加坡时间 00:00 (UTC+8) 触发
-    # 转换为 UTC 时间：00:00 - 8小时 = 前一天的 16:00 UTC
-    - cron: "0 16 * * *" # 每天 UTC 时间 16:00 触发
+    # * is a special character in YAML so you have to quote this string
+    - cron: "10 9,16 * * *"
 
   # 添加 workflow_dispatch 以便手动测试触发
   workflow_dispatch:
