--- a/.github/workflows/daily-gh-trigger.yml
+++ b/.github/workflows/daily-gh-trigger.yml
@@ -4,7 +4,7 @@ name: Daily Auto Trigger GKI_SukiSU_SUSFS Build
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron: "10 9 * * *"
+    - cron: "10 9 * * 0"
 
   # 添加 workflow_dispatch 以便手动测试触发
   workflow_dispatch:
